# pacta

./: AGENTS.md  BACKLOG.md  CHANGELOG.md  Cargo.toml  PROJECT.md  README.md
.github/workflows/: ci.yml
crates/pacta/: Cargo.toml  README.md
crates/pacta-conformance/: Cargo.toml  README.md
crates/pacta-conformance/src/: lib.rs
crates/pacta-contract/: Cargo.toml  README.md
crates/pacta-contract-async/: Cargo.toml  README.md
crates/pacta-contract-async/src/: lib.rs
crates/pacta-contract/src/: async_registry.rs  lib.rs
crates/pacta-driver/: Cargo.toml  README.md
crates/pacta-driver/examples/: compose.rs
crates/pacta-driver/src/: lib.rs
crates/pacta-executor/: Cargo.toml  README.md
crates/pacta-executor/src/: lib.rs
crates/pacta-governance/: Cargo.toml  README.md
crates/pacta-governance/src/: main.rs
crates/pacta-memory/: Cargo.toml  README.md
crates/pacta-memory-async/: Cargo.toml  README.md
crates/pacta-memory-async/src/: lib.rs
crates/pacta-memory/examples/: durable_retry.rs
crates/pacta-memory/src/: lib.rs
crates/pacta/examples/: compose.rs
crates/pacta/src/: lib.rs
docs/: blueprint.md  development-flow.md  domain-language.md
docs/adr/: 0002-adopt-openspec.md  0003-use-contract-domain-language.md  0004-retire-openspec-change-archive.md
openspec/changes/add-crate-readmes-and-license/: design.md  proposal.md  tasks.md
openspec/changes/add-crate-readmes-and-license/specs/release-packaging/: spec.md
openspec/changes/adopt-native-sans-io-governance/: design.md  proposal.md  tasks.md
openspec/changes/adopt-native-sans-io-governance/specs/quality-governance/: spec.md
openspec/changes/adopt-tianheng-019-governance-teeth/: design.md  proposal.md  tasks.md
openspec/changes/adopt-tianheng-019-governance-teeth/specs/quality-governance/: spec.md
openspec/changes/archive/2026-07-08-docs-alignment/: proposal.md  tasks.md
openspec/changes/archive/2026-07-08-pacta-foundation/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-07-09-establish-composition-governance/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-07-09-establish-contract-domain-language/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-07-09-establish-middleware-skeleton/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-07-09-establish-product-vision-blueprint/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-07-09-establish-quality-governance/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-07-09-establish-runtime-skeleton/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-07-10-add-composition-example/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-07-10-encapsulate-retainer/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-07-10-establish-lease-lifecycle/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-07-10-establish-memory-registry/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-07-10-establish-sansio-kernel/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-07-10-harden-error-contract/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-07-10-sync-roadmap-and-backend-ceiling/: design.md  proposal.md  tasks.md
openspec/changes/dissolve-openspec-archive/: design.md  proposal.md  tasks.md
openspec/changes/dissolve-openspec-archive/specs/governance-prose/: spec.md
openspec/changes/dissolve-openspec-archive/specs/quality-governance/: spec.md
openspec/changes/establish-pacta-facade/: design.md  proposal.md  tasks.md
openspec/changes/establish-pacta-facade/specs/public-facade/: spec.md
openspec/changes/establish-pacta-facade/specs/quality-governance/: spec.md
openspec/changes/final-release-hygiene/: design.md  proposal.md  tasks.md
openspec/changes/final-release-hygiene/specs/governance-prose/: spec.md
openspec/changes/final-release-hygiene/specs/quality-governance/: spec.md
openspec/changes/final-release-hygiene/specs/release-packaging/: spec.md
openspec/changes/freeze-the-public-api/: design.md  proposal.md  tasks.md
openspec/changes/freeze-the-public-api/specs/composition-governance/: spec.md
openspec/changes/freeze-the-public-api/specs/contract-manifestation/: spec.md
openspec/changes/freeze-the-public-api/specs/domain-language/: spec.md
openspec/changes/freeze-the-public-api/specs/public-facade/: spec.md
openspec/changes/freeze-the-public-api/specs/quality-governance/: spec.md
openspec/changes/freeze-the-public-api/specs/runtime-skeleton/: spec.md
openspec/changes/freeze-the-public-api/specs/surface-tiers/: spec.md
openspec/changes/harden-governance-file-reads/: proposal.md  tasks.md
openspec/changes/infra-failure-lapses/: design.md  proposal.md  tasks.md
openspec/changes/infra-failure-lapses/specs/runtime-skeleton/: spec.md
openspec/changes/manifest-the-contract/: design.md  proposal.md  tasks.md
openspec/changes/polish-doc-alignment/: design.md  proposal.md  tasks.md
openspec/changes/prepare-release-hygiene/: design.md  proposal.md  tasks.md
openspec/changes/readme-pattern-and-license/: design.md  proposal.md  tasks.md
openspec/changes/retire-composition-examples/: design.md  proposal.md  tasks.md
openspec/changes/tier-the-public-surface/: design.md  proposal.md  tasks.md
openspec/specs/architecture-blueprint/: spec.md
openspec/specs/async-registry-binding/: spec.md
openspec/specs/composition-example/: spec.md
openspec/specs/composition-governance/: spec.md
openspec/specs/contract-manifestation/: spec.md
openspec/specs/domain-language/: spec.md
openspec/specs/governance-prose/: spec.md
openspec/specs/lifecycle-persistence/: spec.md
openspec/specs/middleware-stack/: spec.md
openspec/specs/product-positioning/: spec.md
openspec/specs/public-facade/: spec.md
openspec/specs/quality-governance/: spec.md
openspec/specs/registry-conformance/: spec.md
openspec/specs/release-packaging/: spec.md
openspec/specs/runtime-skeleton/: spec.md
openspec/specs/surface-tiers/: spec.md
(+38 files in other folders)
