[workspace]
resolver = "2"
members = [
    "crates/pacta",
    "crates/pacta-conformance",
    "crates/pacta-contract",
    "crates/pacta-driver",
    "crates/pacta-executor",
    "crates/pacta-governance",
    "crates/pacta-memory"
]

[workspace.package]
version = "0.1.2"
edition = "2024"
rust-version = "1.88"
license = "MIT OR Apache-2.0"
repository = "https://github.com/tacticaldoll/pacta"
keywords = ["durable", "lifecycle", "sans-io", "state-machine", "contract"]
categories = ["asynchronous", "concurrency"]
publish = true

[workspace.dependencies]
pacta-conformance = { path = "crates/pacta-conformance", version = "0.1.2" }
pacta-contract = { path = "crates/pacta-contract", version = "0.1.2" }
pacta-driver = { path = "crates/pacta-driver", version = "0.1.2" }
pacta-executor = { path = "crates/pacta-executor", version = "0.1.2" }
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.10", features = ["v4", "serde"] }
tianheng = "0.1.9"
guibiao = "0.1.9"
