[package]
name = "pacta-conformance"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
keywords.workspace = true
categories.workspace = true
description = "Backend-agnostic conformance suite for Pacta Registry implementations."
publish.workspace = true

[dependencies]
pacta-contract.workspace = true
pacta-contract-async = { workspace = true, optional = true }
uuid.workspace = true

[features]
# Opt-in async runner. Off by default so a sync-only consumer of the suite never
# pulls the async binding or an async runtime into its build graph.
async = ["dep:pacta-contract-async"]
