[package]
name = "pacta-conformance"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
keywords.workspace = true
categories.workspace = true
description = "Backend-agnostic conformance suite for Pacta Registry implementations."
publish.workspace = true

[dependencies]
pacta-contract.workspace = true
uuid.workspace = true

[features]
# Opt-in async runner. Off by default so a sync-only consumer of the suite compiles no async
# binding code and pulls no async runtime. Enables pacta-contract's async binding.
async = ["pacta-contract/async"]
