[package]
name = "pacta-contract-async"
# Own version line (not the workspace lockstep): the async surface evolves independently so the
# frozen, published sync contract (pacta-contract) is never dragged into a cosmetic bump.
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
keywords.workspace = true
categories.workspace = true
description = "Async binding of the Pacta Registry contract, composing over the shared lifecycle kernel."
# Unpublished while the async surface stabilizes; flips to true on pacta's own bar — when the async
# surface stabilizes and pacta-conformance covers the CAS-contention race — binding it to crates.io semver.
publish = false

[dependencies]
pacta-contract.workspace = true

[dev-dependencies]
tokio.workspace = true
uuid.workspace = true
