[package]
name = "pacta-driver"
description = "Mechanical runtime loop for Pacta execution."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true

[dependencies]
pacta-contract.workspace = true
pacta-executor.workspace = true

[dev-dependencies]
uuid.workspace = true
