[package]
name = "pacta-executor"
description = "Pacta-native execution abstractions."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
keywords.workspace = true
categories.workspace = true
publish.workspace = true

[dependencies]
pacta-contract.workspace = true
