[package]
name = "pacta-governance"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Executable architectural governance for the Pacta workspace (tianheng constitution)."
publish = false

[dependencies]
tianheng.workspace = true
guibiao.workspace = true
