[package]
name = "pacta-memory-async"
# Own version line, tracking the async binding it references (see pacta-contract-async).
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
keywords.workspace = true
categories.workspace = true
description = "In-memory async Pacta Registry backend: the reference AsyncRegistry, composing over the shared lifecycle kernel."
# Unpublished while the async surface evolves (see pacta-contract-async).
publish = false

[dependencies]
pacta-contract.workspace = true
pacta-contract-async.workspace = true
async-trait.workspace = true
uuid.workspace = true

[dev-dependencies]
tokio.workspace = true
