[package]
name = "pacta-memory"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "In-memory Pacta Registry backend with real lease and lapse semantics."
publish.workspace = true

[dependencies]
pacta-contract.workspace = true
uuid.workspace = true

[dev-dependencies]
pacta-conformance.workspace = true
