[package]
name = "pacta-memory"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
keywords.workspace = true
categories.workspace = true
description = "In-memory Pacta Registry backend with real lease and lapse semantics."
publish.workspace = true

[features]
# The reference async backend (MemoryRegistryAsync), over the shared store. Zero extra deps beyond
# pacta-contract's async feature.
async = ["pacta-contract/async"]

[dependencies]
pacta-contract.workspace = true
uuid.workspace = true

[dev-dependencies]
pacta-conformance = { workspace = true, features = ["async"] }
